<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".DataActivity">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="113dp"
        android:layout_marginTop="63dp"
        android:layout_marginBottom="72dp"
        android:text="@string/kaloriendedarf"
        android:textColor="#0B0A0A"
        android:textSize="24sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etAge"
            android:layout_width="151dp"
            android:layout_height="75dp"
            android:layout_marginEnd="53dp"
            android:layout_marginBottom="43dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="Enter your age"
            android:inputType="number" />

        <RadioGroup
            android:id="@+id/rgGender"
            android:layout_width="173dp"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbMale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/rbFemale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/female"
                tools:ignore="VisualLintBounds" />
        </RadioGroup>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etHeight"
            android:layout_width="152dp"
            android:layout_height="60dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="Height (in cm)"
            android:inputType="number" />

        <EditText
            android:id="@+id/etWeight"
            android:layout_width="152dp"
            android:layout_height="60dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="Weight (in KG)"
            android:inputType="number" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/rgActivityLevel"
            android:layout_width="157dp"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Select your Active level:"
                android:textColor="#040303" />

            <RadioButton
                android:id="@+id/rbSedentary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sedentary" />

            <RadioButton
                android:id="@+id/rbModeratelyActive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/moderately_active" />

            <RadioButton
                android:id="@+id/rbActive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/active" />

            <RadioButton
                android:id="@+id/rbVeryActive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/very_active" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/rgGoal"
            android:layout_width="173dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Select your Goal:"
                android:textColor="#090808" />

            <RadioButton
                android:id="@+id/rbLoseWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lose_weight" />

            <RadioButton
                android:id="@+id/rbKeepWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/keep_weight" />

            <RadioButton
                android:id="@+id/rbGainWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gain_weight" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCalculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculate" />

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="258dp"
            android:layout_height="match_parent"
            android:textColor="#0C0A0A"
            android:textStyle="bold" />


    </LinearLayout>


</LinearLayout>